--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Basic infos</title>
+    <title>Romain niam0r</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -11,8 +11,10 @@
   </head>
 
   <body>
+    <div class="navbar navbar-fixed-top"></div>
     <div class="container">
       <div class="contents">
+
         <div class ="card text-center">
           <img src="images/r.jpg" alt="R" class="avatar text-center ">
 
@@ -23,32 +25,33 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed illum iure quibusdam veritatis fuga, cupiditate pariatur nulla aperiam, voluptatem, quidem sit! Rem earum, delectus, nesciunt sint quia iure eveniet saepe.
           </p>
         </div>
-
-        <div class = "text-center">
-          <ul class="list-inline">
-            <li>
-              <a href="mailto:niam0r@mm.st">
-                <i class="fa fa-envelope"></i> Email
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/niam0r">
-                <i class="fa fa-github"></i> Github
-              </a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/romain-hallary-0a18983b/">
-                <i class="fa fa-linkedin"></i> Linkedin
-              </a>
-            </li>
-            <li>
-              <a href="https://twitter.com/n14m0r">
-                <i class="fa fa-twitter"></i> Twitter
-              </a>
-            </li>
-          </ul>
-        </div>
       </div>
     </div>
+
+    <div class="navbar navbar-fixed-bottom">
+      <ul class="list-inline">
+        <li>
+          <a href="mailto:niam0r@mm.st">
+            <i class="fa fa-envelope"></i> Email
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/niam0r">
+            <i class="fa fa-github"></i> Github
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/romain-hallary-0a18983b/">
+            <i class="fa fa-linkedin"></i> Linkedin
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/n14m0r">
+            <i class="fa fa-twitter"></i> Twitter
+          </a>
+        </li>
+      </ul>
+    </div>
+
   </body>
 </html>
