--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
   <body>
     <div class="navbar navbar-fixed-top"></div>
+
     <div class="container">
       <div class="contents">
-
         <div class ="card text-center">
+
           <img src="images/r.jpg" alt="R" class="avatar text-center ">
 
           <h1>ROMAIN HALLARY</h1>
@@ -24,11 +25,12 @@
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed illum iure quibusdam veritatis fuga, cupiditate pariatur nulla aperiam, voluptatem, quidem sit! Rem earum, delectus, nesciunt sint quia iure eveniet saepe.
           </p>
+
         </div>
       </div>
     </div>
 
-    <div class="navbar navbar-fixed-bottom">
+    <div class="footer navbar-fixed-bottom">
       <ul class="list-inline">
         <li>
           <a href="mailto:niam0r@mm.st">
