--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <div class="contents">
         <div class ="card text-center">
 
-          <img src="images/r.jpg" alt="R" class="avatar text-center ">
+          <img src="images/r.jpg" alt="R" class="avatar">
+          <img src="images/r2.jpg" alt="R" class="avatar righttop">
 
           <h1>ROMAIN HALLARY</h1>
           <h2>Developper</h2>
@@ -26,6 +27,9 @@
           <p>
             .-.. --- .-. . -- / .. .--. ... ..- -- / -.. --- .-.. --- .-. / ... .. - / .- -- . - --..-- / -.-. --- -. ... . -.-. - . - ..- .-. / .- -.. .. .--. .. ... .. -.-. .. -. --. / . .-.. .. - .-.-.- / ... . -.. / .. .-.. .-.. ..- -- / .. ..- .-. . / --.- ..- .. -... ..- ... -.. .- -- / ...- . .-. .. - .- - .. ... / ..-. ..- --. .- --..-- / -.-. ..- .--. .. -.. .. - .- - . / .--. .- .-. .. .- - ..- .-. / -. ..- .-.. .-.. .- / .- .--. . .-. .. .- -- --..-- / ...- --- .-.. ..- .--. - .- - . -- --..-- / --.- ..- .. -.. . -- / ... .. - # / .-. . -- / . .- .-. ..- -- --..-- / -.. . .-.. . -.-. - ..- ... --..-- / -. . ... -.-. .. ..- -. - / ... .. -. - / --.- ..- .. .- / .. ..- .-. . / . ...- . -. .. . - / ... .- . .--. . .-.-.-
           </p>
+
+          <img src="images/r4.jpg" alt="R" class="avatar">
+          <img src="images/r3.jpg" alt="R" class="avatar rightbottom">
 
         </div>
       </div>
