--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <img src="images/r2.jpg" alt="R" class="avatar righttop">
 
           <h1>ROMAIN HALLARY</h1>
-          <h2>Developper</h2>
+          <!-- <h2>Developper</h2> -->
 
           <p>
             .-.. --- .-. . -- / .. .--. ... ..- -- / -.. --- .-.. --- .-. / ... .. - / .- -- . - --..-- / -.-. --- -. ... . -.-. - . - ..- .-. / .- -.. .. .--. .. ... .. -.-. .. -. --. / . .-.. .. - .-.-.- / ... . -.. / .. .-.. .-.. ..- -- / .. ..- .-. . / --.- ..- .. -... ..- ... -.. .- -- / ...- . .-. .. - .- - .. ... / ..-. ..- --. .- --..-- / -.-. ..- .--. .. -.. .. - .- - . / .--. .- .-. .. .- - ..- .-. / -. ..- .-.. .-.. .- / .- .--. . .-. .. .- -- --..-- / ...- --- .-.. ..- .--. - .- - . -- --..-- / --.- ..- .. -.. . -- / ... .. - # / .-. . -- / . .- .-. ..- -- --..-- / -.. . .-.. . -.-. - ..- ... --..-- / -. . ... -.-. .. ..- -. - / ... .. -. - / --.- ..- .. .- / .. ..- .-. . / . ...- . -. .. . - / ... .- . .--. . .-.-.-
