changed description, title and linkedin link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Romain niam0r</title>
+    <title>Romain Hallary</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -22,10 +22,9 @@
           <img src="images/r2.jpg" alt="R" class="avatar righttop">
 
           <h1>ROMAIN HALLARY</h1>
-          <!-- <h2>Developper</h2> -->
-
+          <h2>Full Stack Web Developper</h2>
           <p>
-            .-.. --- .-. . -- / .. .--. ... ..- -- / -.. --- .-.. --- .-. / ... .. - / .- -- . - --..-- / -.-. --- -. ... . -.-. - . - ..- .-. / .- -.. .. .--. .. ... .. -.-. .. -. --. / . .-.. .. - .-.-.- / ... . -.. / .. .-.. .-.. ..- -- / .. ..- .-. . / --.- ..- .. -... ..- ... -.. .- -- / ...- . .-. .. - .- - .. ... / ..-. ..- --. .- --..-- / -.-. ..- .--. .. -.. .. - .- - . / .--. .- .-. .. .- - ..- .-. / -. ..- .-.. .-.. .- / .- .--. . .-. .. .- -- --..-- / ...- --- .-.. ..- .--. - .- - . -- --..-- / --.- ..- .. -.. . -- / ... .. - # / .-. . -- / . .- .-. ..- -- --..-- / -.. . .-.. . -.-. - ..- ... --..-- / -. . ... -.-. .. ..- -. - / ... .. -. - / --.- ..- .. .- / .. ..- .-. . / . ...- . -. .. . - / ... .- . .--. . .-.-.-
+            Attended Le Wagon London (Batch # 103), 9-week intensive coding bootcamp learning Ruby on Rails, HTML, CSS, Bootstrap, JavaScript ES2015, SQL, git, GitHub and Heroku. Designed, Implemented and Shipped to production a clone of AirBnB and a Rails prototype of <a href="http://www.larder-recipes.co.uk">www.larder-recipes.co.uk</a>
           </p>
 
           <img src="images/r4.jpg" alt="R" class="avatar">
@@ -48,7 +47,7 @@
           </a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/romain-hallary-0a18983b/">
+          <a href="https://www.linkedin.com/in/niamor/">
             <i class="fa fa-linkedin"></i> Linkedin
           </a>
         </li>
