--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Romain Hallary</title>
-
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
   </head>
 
@@ -23,8 +22,7 @@
 
           <h1>ROMAIN HALLARY</h1>
           <h2>Full Stack Web Developper</h2>
-          <p>
-            Attended Le Wagon London (Batch # 103), 9-week intensive coding bootcamp learning Ruby on Rails, HTML, CSS, Bootstrap, JavaScript ES2015, SQL, git, GitHub and Heroku. Designed, Implemented and Shipped to production a clone of AirBnB and a Rails prototype of <a href="http://www.larder-recipes.co.uk">www.larder-recipes.co.uk</a>
+          <p>&nbsp&nbsp&nbsp&nbspAttended Le Wagon London (Batch # 103), 9-week intensive coding bootcamp learning Ruby on Rails, HTML, CSS, Bootstrap, JavaScript ES2015, SQL, git, GitHub and Heroku. Designed, Implemented and Shipped to production a clone of AirBnB and a Rails prototype of <a href="http://www.larder-recipes.co.uk">www.larder-recipes.co.uk</a>
           </p>
 
           <img src="images/r4.jpg" alt="R" class="avatar">
