added project page

--- a/index.html
+++ b/index.html
@@ -1,62 +1,75 @@
 
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Romain Hallary</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-  </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Romain niam0r</title>
+  <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+</head>
 
-  <body>
-    <div class="navbar navbar-fixed-top"></div>
+<body>
+  <div class="navbar navbar-fixed-top"></div>
 
-    <div class="container">
-      <div class="contents">
-        <div class ="card text-center">
+  <div class="container">
+    <div class="contents">
+      <div class ="card text-center">
 
-          <img src="images/r.jpg" alt="R" class="avatar">
-          <img src="images/r2.jpg" alt="R" class="avatar righttop">
+        <img src="images/r.jpg" alt="R" class="avatar">
+        <img src="images/r2.jpg" alt="R" class="avatar righttop">
 
-          <h1>ROMAIN HALLARY</h1>
-          <h2>Full Stack Web Developper</h2>
-          <p>&nbsp&nbsp&nbsp&nbspAttended Le Wagon London (Batch # 103), 9-week intensive coding bootcamp learning Ruby on Rails, HTML, CSS, Bootstrap, JavaScript ES2015, SQL, git, GitHub and Heroku. Designed, Implemented and Shipped to production a clone of AirBnB and a Rails prototype of <a href="http://www.larder-recipes.co.uk">www.larder-recipes.co.uk</a>
-          </p>
+        <h1>ROMAIN HALLARY</h1>
+        <h2>Full Stack Web Developper</h2>
+        <p>
+          &nbsp&nbsp&nbsp&nbspAttended Le Wagon London (Batch # 103), 9-week intensive coding bootcamp learning Ruby on Rails, HTML, CSS, Bootstrap, JavaScript ES2015, SQL, git, GitHub and Heroku. Designed, Implemented and Shipped to production a clone of AirBnB and a Rails prototype of <a href="http://www.larder-recipes.co.uk" target="_blank">www.larder-recipes.co.uk</a>
+        </p>
 
-          <img src="images/r4.jpg" alt="R" class="avatar">
-          <img src="images/r3.jpg" alt="R" class="avatar rightbottom">
+        <p class="text-center">
+          For a full list of my projects have a look <a href="projects.html" target="_blank">here</a> or on my <a href="https://github.com/niam0r" target="_blank">Github</a>
+        </p>
 
-        </div>
+        <p class="text-center">Currently working on adding more features to our Ruby on Rails application and learning more JavaScript by doing this <a href="https://niam0r.github.io/JavaScript30/" target="_blank">challenge</a> and my next step is doing this <a href="https://reactforbeginners.com/" target="_blank">course on React</a></p>
+
+        <img src="images/r4.jpg" alt="R" class="avatar">
+        <img src="images/r3.jpg" alt="R" class="avatar rightbottom">
+
       </div>
     </div>
+  </div>
 
-    <div class="footer navbar-fixed-bottom">
-      <ul class="list-inline">
-        <li>
-          <a href="mailto:niam0r@mm.st">
-            <i class="fa fa-envelope"></i> Email
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/niam0r">
-            <i class="fa fa-github"></i> Github
-          </a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/niamor/">
-            <i class="fa fa-linkedin"></i> Linkedin
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com/n14m0r">
-            <i class="fa fa-twitter"></i> Twitter
-          </a>
-        </li>
-      </ul>
-    </div>
+  <div class="footer navbar-fixed-bottom">
+    <ul class="list-inline">
+      <li>
+        <a href="projects.html" target="_blank">
+          <i class="fa fa-suitcase"></i> Projects
+        </a>
+      </li>
+      <li>
+        <a href="mailto:niam0r@mm.st">
+          <i class="fa fa-envelope"></i> Email
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/niam0r" target="_blank">
+          <i class="fa fa-github"></i> Github
+        </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/niamor/" target="_blank">
+          <i class="fa fa-linkedin"></i> Linkedin
+        </a>
+      </li>
+      <li>
+        <a href="https://twitter.com/n14m0r" target="_blank">
+          <i class="fa fa-twitter"></i> Twitter
+        </a>
+      </li>
+    </ul>
+  </div>
 
-  </body>
+</body>
 </html>
