styled project page

--- a/projects.html
+++ b/projects.html
@@ -10,8 +10,67 @@
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-  <h1>niam0r's projects</h1>
+  <div class="navbar navbar-fixed-top"></div>
+
+  <div class="container">
+    <div class="contents">
+      <div class ="card">
+
+        <h2 class="text-center">niam0r's projects</h2>
+        <br>
+        <a href="https://niam0r.github.io/JavaScript30/" target="_blank">#JavaScript30 challenges</a>
+        <br>
+
+        <p>Projects built during <a href="https://www.lewagon.com/demoday/103/larder" target="_blank">Le Wagon Bootcamp #103</a>:</p>
+
+        <ul>
+          <li>
+            <a href="http://www.larder-recipes.co.uk" target="_blank">www.larder-recipes.co.uk</a>
+          </li>
+          <li>
+            <a href="https://devourfoodtours.herokuapp.com/" target="_blank">devourfoodtours.herokuapp.com</a>
+          </li>
+          <li>
+            <a href="https://maxcocktail.herokuapp.com/" target="_blank">Max Cocktail</a>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  </div>
+
+
+  <div class="footer navbar-fixed-bottom">
+    <ul class="list-inline">
+      <li>
+        <a href="projects.html" target="_blank">
+          <i class="fa fa-suitcase"></i> Projects
+        </a>
+      </li>
+      <li>
+        <a href="mailto:niam0r@mm.st">
+          <i class="fa fa-envelope"></i> Email
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/niam0r" target="_blank">
+          <i class="fa fa-github"></i> Github
+        </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/niamor/" target="_blank">
+          <i class="fa fa-linkedin"></i> Linkedin
+        </a>
+      </li>
+      <li>
+        <a href="https://twitter.com/n14m0r" target="_blank">
+          <i class="fa fa-twitter"></i> Twitter
+        </a>
+      </li>
+    </ul>
+  </div>
 
 </body>
 </html>
