--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           For a full list of my projects have a look <a href="projects.html" target="_blank">here</a> or on my <a href="https://github.com/niam0r" target="_blank">Github</a>
         </p>
 
-        <p class="text-center">Currently working on adding more features to our Ruby on Rails application and learning more JavaScript by doing this <a href="https://niam0r.github.io/JavaScript30/" target="_blank">challenge</a> and my next step is doing this <a href="https://reactforbeginners.com/" target="_blank">course on React</a></p>
+        <p class="text-center">Currently working on adding more features to our Ruby on Rails application and focusing on learning more JavaScript and React. I'm also doing this <a href="https://reactforbeginners.com/" target="_blank">course on React</a> and working at <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> as a teacher assistant.</p>
 
         <img src="images/r4.jpg" alt="R" class="avatar">
         <img src="images/r3.jpg" alt="R" class="avatar rightbottom">
