animating R in progress

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="contents">
       <div class ="card text-center">
 
-        <img src="images/r.jpg" alt="R" class="avatar">
-        <img src="images/r2.jpg" alt="R" class="avatar righttop">
+        <img src="images/r.jpg" alt="R"  class="spinning avatar">
+        <img src="images/r2.jpg" alt="R" class="spinning avatar right-top">
 
         <h1>ROMAIN HALLARY</h1>
         <h2>Full Stack Web Developper</h2>
@@ -34,8 +34,8 @@
 
         <p class="text-center">Currently working on adding more features to our Ruby on Rails application and focusing on learning more JavaScript and React. I'm also doing this <a href="https://reactforbeginners.com/" target="_blank">course on React</a> and working at <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> as a teacher assistant.</p>
 
-        <img src="images/r4.jpg" alt="R" class="avatar">
-        <img src="images/r3.jpg" alt="R" class="avatar rightbottom">
+        <img src="images/r4.jpg" alt="R" class="spinning avatar">
+        <img src="images/r3.jpg" alt="R" class="spinning avatar right-bottom">
 
       </div>
     </div>
