listed projects wip

--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,18 @@
       <div class ="card">
 
         <h2 class="text-center">niam0r's projects</h2>
+
         <br>
-        <a href="https://niam0r.github.io/JavaScript30/" target="_blank">#JavaScript30 challenges</a>
+
+        <ul>
+          <li>
+            <a href="https://niam0r.github.io/airbnb-clone/" target="_blank">Airbnb clone built with React</a>
+          </li>
+          <li>
+            <a href="https://niam0r.github.io/JavaScript30/" target="_blank">#JavaScript30 challenges</a>
+          </li>
+        </ul>
+
         <br>
 
         <p>Projects built during <a href="https://www.lewagon.com/demoday/103/larder" target="_blank">Le Wagon Bootcamp #103</a>:</p>
@@ -33,7 +43,7 @@
             <a href="https://devourfoodtours.herokuapp.com/" target="_blank">devourfoodtours.herokuapp.com</a>
           </li>
           <li>
-            <a href="https://maxcocktail.herokuapp.com/" target="_blank">Max Cocktail</a>
+            <a href="https://maxcocktail.herokuapp.com/" target="_blank">Max cocktail</a>
           </li>
         </ul>
 
