--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
 
         <p class="text-center">
-          For a full list of my projects have a look <a href="projects.html" target="_blank">here</a> or on my <a href="https://github.com/niam0r" target="_blank">Github</a>
+          For a full list of my projects have a look <a href="projects.html">here</a> or on my <a href="https://github.com/niam0r" target="_blank">Github</a>
         </p>
 
         <p class="text-center">Currently working on adding more features to our Ruby on Rails application and focusing on learning more JavaScript and React. I'm also doing this <a href="https://reactforbeginners.com/" target="_blank">course on React</a> and working at <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> as a teacher assistant.</p>
@@ -44,7 +44,7 @@
   <div class="footer navbar-fixed-bottom">
     <ul class="list-inline">
       <li>
-        <a href="projects.html" target="_blank">
+        <a href="projects.html">
           <i class="fa fa-suitcase"></i> Projects
         </a>
       </li>
