--- a/projects.html
+++ b/projects.html
@@ -22,30 +22,20 @@
 
         <br>
 
-        <ul>
-          <li>
-            <a href="https://niam0r.github.io/airbnb-clone/" target="_blank">Airbnb clone built with React</a>
-          </li>
-          <li>
-            <a href="https://niam0r.github.io/JavaScript30/" target="_blank">#JavaScript30 challenges</a>
-          </li>
-        </ul>
+        <div class="list-group list-group-flush">
+          <a href="https://niam0r.github.io/airbnb-clone/" target="_blank">Airbnb clone built with React</a>
+          <a href="https://niam0r.github.io/JavaScript30/" target="_blank">#JavaScript30 challenges</a>
+        </div>
 
         <br>
 
         <p>Projects built during <a href="https://www.lewagon.com/demoday/103/larder" target="_blank">Le Wagon Bootcamp #103</a>:</p>
 
-        <ul>
-          <li>
+        <div class="list-group list-group-flush">
             <a href="http://www.larder-recipes.co.uk" target="_blank">www.larder-recipes.co.uk</a>
-          </li>
-          <li>
             <a href="https://devourfoodtours.herokuapp.com/" target="_blank">devourfoodtours.herokuapp.com</a>
-          </li>
-          <li>
             <a href="https://maxcocktail.herokuapp.com/" target="_blank">Max cocktail</a>
-          </li>
-        </ul>
+        </div>
 
       </div>
     </div>
