updated bootstrap link

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <title>Romain niam0r</title>
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -32,7 +31,7 @@
           For a full list of my projects have a look <a href="projects.html">here</a> or on my <a href="https://github.com/niam0r" target="_blank">Github</a>
         </p>
 
-        <p class="text-center">Currently working on adding more features to our Ruby on Rails application and focusing on learning more JavaScript and React. I'm also doing this <a href="https://reactforbeginners.com/" target="_blank">course on React</a> and working at <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> as a teacher assistant.</p>
+        <p class="text-center">Currently working on adding more features to our Ruby on Rails applications and focusing on learning more JavaScript and React. I'm also doing this <a href="https://reactforbeginners.com/" target="_blank">course on React</a> and working at <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> as a teacher assistant.</p>
 
         <img src="images/r4.jpg" alt="R" class="spinning avatar">
         <img src="images/r3.jpg" alt="R" class="spinning avatar right-bottom">
