--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
       </li>
       <li>
         <a href="https://github.com/niam0r" target="_blank">
-          <i class="fa fa-github"></i> Github
+          <i class="fab fa-github"></i> Github
         </a>
       </li>
       <li>
         <a href="https://www.linkedin.com/in/niamor/" target="_blank">
-          <i class="fa fa-linkedin"></i> Linkedin
+          <i class="fab fa-linkedin"></i> Linkedin
         </a>
       </li>
       <li>
         <a href="https://twitter.com/n14m0r" target="_blank">
-          <i class="fa fa-twitter"></i> Twitter
+          <i class="fab fa-twitter"></i> Twitter
         </a>
       </li>
     </ul>
