added catch of the day to projects

--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,7 @@
         <br>
 
         <div class="list-group list-group-flush">
+          <a href="https://niam0r-catch-of-the-day.herokuapp.com/" target="_blank">Catch of the day app built with React</a>
           <a href="https://niam0r.github.io/airbnb-clone/" target="_blank">Airbnb clone built with React</a>
           <a href="https://niam0r.github.io/JavaScript30/" target="_blank">#JavaScript30 challenges</a>
         </div>
