--- a/index.html
+++ b/index.html
@@ -25,14 +25,18 @@
         <h1>ROMAIN HALLARY</h1>
         <h2>Full Stack Web Developper</h2>
         <p>
-          &nbsp&nbsp&nbsp&nbspAttended Le Wagon London (Batch # 103), 9-week intensive coding bootcamp learning Ruby on Rails, HTML, CSS, Bootstrap, JavaScript ES2015, SQL, git, GitHub and Heroku. Designed, Implemented and Shipped to production a clone of AirBnB and a Rails prototype of <a href="http://www.larder-recipes.co.uk" target="_blank">www.larder-recipes.co.uk</a>
+          &nbsp&nbsp&nbsp&nbspI've attended Le Wagon London (Batch # 103), a 9-week intensive coding bootcamp learning Ruby on Rails, HTML, CSS, Bootstrap, JavaScript ES2015, SQL, git, GitHub and Heroku. Where we've designed, implemented and shipped to production a clone of AirBnB and a Rails prototype of  <a href="http://www.larder-recipes.co.uk" target="_blank">www.larder-recipes.co.uk</a>
+        </p>
+        <p class="text-center">
+          Since I've finished the course I've been practising my developer skills by adding more features to the projects I've built during the bootcamp with a focus on learning more JavaScript and React.
+        </p>
+        <p class="text-center">
+          I'm also going back regularly to <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> as a teacher assistant.
         </p>
 
         <p class="text-center">
           For a full list of my projects have a look <a href="projects.html">here</a> or on my <a href="https://github.com/niam0r" target="_blank">Github</a>
         </p>
-
-        <p class="text-center">Currently working on adding more features to our Ruby on Rails applications and focusing on learning more JavaScript and React. I'm also doing this <a href="https://reactforbeginners.com/" target="_blank">course on React</a> and working at <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> as a teacher assistant.</p>
 
         <img src="images/r4.jpg" alt="R" class="spinning avatar">
         <img src="images/r3.jpg" alt="R" class="spinning avatar right-bottom">
