--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>niam0r's projects</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Overpass|Overpass+Mono:400,600,700" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -16,13 +17,13 @@
 
   <div class="container">
     <div class="contents">
-      <div class ="card">
+      <div class ="card overpass">
 
-        <h2 class="text-center">niam0r's projects</h2>
+        <h2 class="text-center">Projects</h2>
 
         <br>
 
-        <div class="list-group list-group-flush">
+        <div class="list-group list-group-flush overpass">
           <a href="https://niam0r-catch-of-the-day.herokuapp.com/" target="_blank">Catch of the day app built with React</a>
           <a href="https://niam0r.github.io/airbnb-clone/" target="_blank">Airbnb clone built with React</a>
           <a href="https://niam0r.github.io/JavaScript30/" target="_blank">#JavaScript30 challenges</a>
