added redux course

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
           Since I've finished the course I've been practising my developer skills by adding more features to the projects I've built during the bootcamp with a focus on learning more JavaScript and React.
         </p>
         <p class="text-center">
+          Edit 14/02/2018 - Just started <a href="https://www.udemy.com/react-redux/" target="_blank"> Spethen Grider's Modern React with Redux course on Udemy</a>
+        </p>
+        <p class="text-center">
           I'm also going back regularly to <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> as a teacher assistant.
         </p>
 
