--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </a>
       </li>
       <li>
-        <a href="mailto:niam0r@mm.st">
+        <a href="mailto:romain@sent.at">
           <i class="fa fa-envelope"></i> Email
         </a>
       </li>
