added youtube app to projects

--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,15 @@
         <br>
 
         <div class="list-group list-group-flush overpass">
+          <!-- <a href="https://weather-niam0r.herokuapp.com/" target="_blank">
+            Weather app built during Stephen Grider's Modern React with Redux Course
+          </a>
+          <a href="https://blog-niam0r.herokuapp.com/" target="_blank">
+            Blog app built during Stephen Grider's Modern React with Redux Course
+          </a> -->
+          <a href="https://niam0r-youtube-app.herokuapp.com/" target="_blank">
+            Youtube app built during Stephen Grider's Modern React with Redux Course
+          </a>
           <a href="https://niam0r-catch-of-the-day.herokuapp.com/" target="_blank">Catch of the day app built with React</a>
           <a href="https://niam0r.github.io/airbnb-clone/" target="_blank">Airbnb clone built with React</a>
           <a href="https://niam0r.github.io/JavaScript30/" target="_blank">#JavaScript30 challenges</a>
