published weather app and corrected url

--- a/projects.html
+++ b/projects.html
@@ -24,9 +24,9 @@
         <br>
 
         <div class="list-group list-group-flush overpass">
-          <!-- <a href="https://weather-niam0r.herokuapp.com/" target="_blank">
+          <a href="https://niam0r-weather-app.herokuapp.com/" target="_blank">
             Weather app built during Stephen Grider's Modern React with Redux Course
-          </a> -->
+          </a>
           <a href="https://blog-niam0r.herokuapp.com/" target="_blank">
             Blog app built during Stephen Grider's Modern React with Redux Course
           </a>
