correct grammar on profile, added projets

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
         <h1>ROMAIN HALLARY</h1>
         <h2>Full Stack Web Developper</h2>
         <p>
-          &nbsp&nbsp&nbsp&nbspI've attended Le Wagon London (Batch # 103), a 9-week intensive coding bootcamp learning Ruby on Rails, HTML, CSS, Bootstrap, JavaScript ES2015, SQL, git, GitHub and Heroku. Where we've designed, implemented and shipped to production a clone of AirBnB and a Rails prototype of  <a href="http://www.larder-recipes.co.uk" target="_blank">www.larder-recipes.co.uk</a>
+          &nbsp&nbsp&nbsp&nbspI attended Le Wagon London (Batch # 103), a 9-week intensive coding bootcamp learning Ruby on Rails, HTML, CSS, Bootstrap, JavaScript ES2015, SQL, git, GitHub and Heroku. Where we designed, implemented and shipped to production a clone of AirBnB and a Rails prototype of  <a href="http://www.larder-recipes.co.uk" target="_blank">www.larder-recipes.co.uk</a>
         </p>
         <p class="text-center">
-          Since I've finished the course I've been practising my developer skills by adding more features to the projects I've built during the bootcamp with a focus on learning more JavaScript and React.
+          Since I completed the course I've been practising my developer skills by adding more features to the projects I built during the bootcamp with a focus on learning more JavaScript and React.
         </p>
         <p class="text-center">
           Update 14/06/2018 - Just started Le Wagon's "Learn React & Redux" Course.
         </p>
         <p class="text-center">
-          I'm also going back regularly to <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> as a teacher assistant.
+          <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> recruited me as a teaching assistant and I have been returning regularly to help current students.
         </p>
 
         <p class="text-center">
