--- a/projects.html
+++ b/projects.html
@@ -24,15 +24,40 @@
         <br>
 
         <div class="list-group list-group-flush overpass">
-          <a href="https://niam0r-weather-app.herokuapp.com/" target="_blank">
-            Weather app built during Stephen Grider's Modern React with Redux Course
-          </a>
-          <a href="https://blog-niam0r.herokuapp.com/" target="_blank">
-            Blog app built during Stephen Grider's Modern React with Redux Course
-          </a>
-          <a href="https://niam0r-youtube-app.herokuapp.com/" target="_blank">
-            Youtube app built during Stephen Grider's Modern React with Redux Course
-          </a>
+          <p>Projects built during Le Wagon's "Learn React & Redux" Course: </p>
+          <ul>
+            <!-- <li>
+              <a href="https://niam0r.github.io/garage-redux/" target="_blank">Garage app</a>
+            </li> -->
+            <li>
+              <a href="https://niam0r.github.io/chat-redux/" target="_blank">Chat app</a>
+            </li>
+            <li>
+              <a href="https://niam0r.github.io/wagon-cities/" target="_blank">Le Wagon's cities</a>
+            </li>
+            <li>
+              <a href="https://niam0r.github.io/react-flats/" target="_blank">Airbnb inspired places mapping app</a>
+            </li>
+            <li>
+              <a href="https://niam0r.github.io/react-gifs/" target="_blank">Giphy "search and display" app</a>
+            </li>
+          </ul>
+
+          <p>Projects built during Stephen Grider's Modern React with Redux Course:</p>
+          <ul>
+            <li>
+              <a href="https://niam0r-weather-app.herokuapp.com/" target="_blank">Weather app</a>
+            </li>
+            <li>
+              <a href="https://blog-niam0r.herokuapp.com/" target="_blank">Blog app</a>
+            </li>
+            <li>
+              <a href="https://niam0r-youtube-app.herokuapp.com/" target="_blank">Youtube app</a>
+            </li>
+          </ul>
+
+
+
           <a href="https://niam0r-catch-of-the-day.herokuapp.com/" target="_blank">Catch of the day app built with React</a>
           <a href="https://niam0r.github.io/airbnb-clone/" target="_blank">Airbnb clone built with React</a>
           <a href="https://niam0r.github.io/JavaScript30/" target="_blank">#JavaScript30 challenges</a>
@@ -41,13 +66,17 @@
         <br>
 
         <p>Projects built during <a href="https://www.lewagon.com/demoday/103/larder" target="_blank">Le Wagon Bootcamp #103</a>:</p>
-
-        <div class="list-group list-group-flush">
-            <a href="http://www.larder-recipes.co.uk" target="_blank">www.larder-recipes.co.uk</a>
-            <a href="https://devourfoodtours.herokuapp.com/" target="_blank">devourfoodtours.herokuapp.com</a>
-            <a href="https://maxcocktail.herokuapp.com/" target="_blank">Max cocktail</a>
-        </div>
-
+          <ul>
+            <li>
+              <a href="http://www.larder-recipes.co.uk" target="_blank">www.larder-recipes.co.uk</a>
+            </li>
+            <li>
+              <a href="https://devourfoodtours.herokuapp.com/" target="_blank">devourfoodtours.herokuapp.com</a>
+            </li>
+            <li>
+              <a href="https://maxcocktail.herokuapp.com/" target="_blank">Max cocktail</a>
+            </li>
+          </ul>
       </div>
     </div>
   </div>
