removed bullet points and fixed link:hover

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
 
         <br>
 
-        <div class="list-group list-group-flush overpass">
+        <div class="list-group list-group-flush <!-- overpass -->">
           <p>Projects built during Le Wagon's "Learn React & Redux" Course: </p>
           <ul>
             <!-- <li>
