added latest project links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <p class="text-center">
           <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> recruited me as a teaching assistant and I have been returning regularly to help current students.
         </p>
-
+        <p class="text-center">
+          My latest project: <a href="https://goodreads-scraper-api.herokuapp.com/" target="_blank">Goodreads user's quotes scraper and API </a> source code: <a href="https://github.com/niam0r/goodreads-scraper" target="_blank">Github</a>
+        </p>
         <p class="text-center">
           For a full list of my projects have a look <a href="projects.html">here</a> or on my <a href="https://github.com/niam0r" target="_blank">Github</a>
         </p>
