edited links, added meta tags and screenshot

--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Romain niam0r</title>
+  <title>Romain Hallary </title>
   <meta charset="utf-8">
+
+  <meta name="description" content="Romain Hallary | Full Stack Web Developper">
+  <meta name="keywords" content="Web, developer, full-stack ">
+  <meta name="author" content="Romain Hallary">
+
+  <meta property="og:title" content="Romain Hallary | Full Stack Web Developper"/>
+  <meta property="og:image" content="https://imgur.com/a/Nw3OoEW"/>
+  <meta property="og:site_name" content="niamor.me"/>
+  <!-- <meta property="og:description" content=""/> -->
+
+
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Overpass|Overpass+Mono:400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -51,12 +62,12 @@
   <div class="footer navbar-fixed-bottom">
     <ul class="list-inline">
       <li>
-        <a href="projects.html">
+        <a href="http://projects.niamor.me/">
           <i class="fa fa-suitcase"></i> Projects
         </a>
       </li>
       <li>
-        <a href="mailto:romain@sent.at">
+        <a href="mailto:romain@niamor.me">
           <i class="fa fa-envelope"></i> Email
         </a>
       </li>
