changeg URL for og:image sceenshot

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="Romain Hallary">
 
   <meta property="og:title" content="Romain Hallary | Full Stack Web Developper"/>
-  <meta property="og:image" content="https://imgur.com/a/Nw3OoEW"/>
+  <meta property="og:image" content="https://i.imgur.com/coo2KsX.png"/>
   <meta property="og:site_name" content="niamor.me"/>
   <!-- <meta property="og:description" content=""/> -->
 
