added latest project to projects.html and changed links

--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,9 @@
         <br>
 
         <div class="list-group list-group-flush <!-- overpass -->">
+          <p class="text-center">
+          My latest project: <a href="http://goodreads.niamor.me/" target="_blank">Goodreads user's quotes scraper and API </a> source code: <a href="https://github.com/niam0r/goodreads-scraper" target="_blank">Github</a>
+        </p>
           <p>Projects built during Le Wagon's "Learn React & Redux" Course: </p>
           <ul>
             <!-- <li>
