edited desc and corrected typo

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         <img src="images/r2.jpg" alt="R" class="spinning avatar right-top">
 
         <h1>ROMAIN HALLARY</h1>
-        <h2>Full Stack Web Developper</h2>
+        <h2>Full Stack Web Developer</h2>
         <p>
-          &nbsp&nbsp&nbsp&nbspI attended Le Wagon London (Batch # 103), a 9-week intensive coding bootcamp learning Ruby on Rails, HTML, CSS, Bootstrap, JavaScript ES2015, SQL, git, GitHub and Heroku. Where we designed, implemented and shipped to production a clone of AirBnB and a Rails prototype of  <a href="http://www.larder-recipes.co.uk" target="_blank">www.larder-recipes.co.uk</a>
+          &nbsp&nbsp&nbsp&nbspI attended Le Wagon London (Batch # 103), a 9-week intensive coding bootcamp learning Ruby on Rails, JavaScript, HTML, CSS, SQL, git, GitHub, Heroku and Bootstrap. Where we designed, implemented and shipped to production a clone of AirBnB and a Rails prototype of  <a href="http://www.larder-recipes.co.uk" target="_blank">www.larder-recipes.co.uk</a>
         </p>
         <p class="text-center">
-          Since I completed the course I've been practising my developer skills by adding more features to the projects I built during the bootcamp with a focus on learning more JavaScript and React.
+          Since I completed the course I've been practising my skills by adding more features to the projects I built during the bootcamp with a focus on developing my fluency in Ruby and JavaScript and learning React.
         </p>
         <p class="text-center">
           <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> recruited me as a teaching assistant and I have been returning regularly to help current students.
