--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h1>ROMAIN HALLARY</h1>
         <h2>Full Stack Web Developer</h2>
         <p>
-          &nbsp&nbsp&nbsp&nbspI attended Le Wagon London (Batch # 103), a 9-week intensive coding bootcamp learning Ruby on Rails, JavaScript, HTML, CSS, SQL, git, GitHub, Heroku and Bootstrap. Where we designed, implemented and shipped to production a clone of AirBnB and a Rails prototype of  <a href="http://www.larder-recipes.co.uk" target="_blank">www.larder-recipes.co.uk</a>
+          &emsp;&emsp;I attended Le Wagon London, a 9-week intensive coding bootcamp learning Ruby on Rails, JavaScript, HTML, CSS, SQL, git, GitHub, Heroku and Bootstrap. Where we designed, implemented and shipped to production a clone of AirBnB and a Rails prototype of  <a href="http://www.larder-recipes.co.uk" target="_blank">www.larder-recipes.co.uk</a>
         </p>
         <p class="text-center">
           Since I completed the course I've been practising my skills by adding more features to the projects I built during the bootcamp with a focus on developing my fluency in Ruby and JavaScript and learning React.
