--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           &emsp;&emsp;I attended Le Wagon London, a 9-week intensive coding bootcamp learning Ruby on Rails, JavaScript, HTML, CSS, SQL, git, GitHub, Heroku and Bootstrap. Where we designed, implemented and shipped to production a clone of AirBnB and a Rails prototype of  <a href="http://www.larder-recipes.co.uk" target="_blank">www.larder-recipes.co.uk</a>
         </p>
         <p class="text-center">
-          Since I completed the course I've been practising my skills by adding more features to the projects I built during the bootcamp with a focus on developing my fluency in Ruby and JavaScript and learning React.
+          Since completing the course, I've honed my skills by adding features to the projects I built during the bootcamp. I've focused on developing my fluency in Ruby and JavaScript, alongside learning React.
         </p>
         <p class="text-center">
           <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> recruited me as a teaching assistant and I have been returning regularly to help current students.
