added exercism githb link

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
           <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> recruited me as a teaching assistant and I have been returning regularly to help current students.
         </p>
         <p class="text-center">
+          I'm currently working my way through exercism's Ruby and Javascript track, my solutions can be found here: <a href="https://github.com/niam0r/exercism" target="_blank">github.com/niam0r/exercism</a>
+        </p>
+        <p class="text-center">
           My latest project: <a href="http://goodreads.niamor.me/" target="_blank">Goodreads user's quotes scraper and API </a> source code: <a href="https://github.com/niam0r/goodreads-scraper" target="_blank">Github</a>
         </p>
         <p class="text-center">
