edit other links

--- a/projects.html
+++ b/projects.html
@@ -71,13 +71,18 @@
         <p>Projects built during <a href="https://www.lewagon.com/demoday/103/larder" target="_blank">Le Wagon Bootcamp #103</a>:</p>
           <ul>
             <li>
-              <a href="http://larder.herokuapp.com/" target="_blank">www.larder-recipes.co.uk</a>
+              <a href="http://larder.herokuapp.com/" target="_blank">
+                larder.herokuapp.com
+              </a>
             </li>
             <li>
-              <a href="https://devourfoodtours.herokuapp.com/" target="_blank">devourfoodtours.herokuapp.com</a>
+              <a href="https://devourfoodtours.herokuapp.com/" target="_blank">  devourfoodtours.herokuapp.com
+              </a>
             </li>
             <li>
-              <a href="https://maxcocktail.herokuapp.com/" target="_blank">Max cocktail</a>
+              <a href="https://maxcocktail.herokuapp.com/" target="_blank">
+                maxcocktail.herokuapp.com
+              </a>
             </li>
           </ul>
       </div>
