made copies of WIP projects.html and style.css

--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
         </a>
       </li>
       <li>
-        <a href="mailto:niam0r@mm.st">
+        <a href="mailto:romain@niamor.me">
           <i class="fa fa-envelope"></i> Email
         </a>
       </li>
